# django-snippets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
shortuuid/: README.md  runtests.py
shortuuid/shortuuid/models/: fields.py
shortuuid/tests/: test_settings.py
shortuuid/tests/tests/: test_shortuuid.py
